// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BugzillaQueryUrl /> renders correctly 1`] = `
<a
  href="http://github.com"
  rel="noopener noreferrer"
  target="_blank"
>
  <span
    className="MuiBadge-root-3 BugzillaQueryUrl-margin-1 Z"
  >
    <p
      className="MuiTypography-root-10 MuiTypography-body1-19 BugzillaQueryUrl-text-2 Y"
    >
      test
    </p>
    <span
      className="MuiBadge-badge-4 MuiBadge-colorPrimary-5"
    >
      1
    </span>
  </span>
</a>
`;

exports[`<BugzillaQueryUrl /> renders correctly without bugs 1`] = `
<a
  href="http://github.com"
  rel="noopener noreferrer"
  target="_blank"
>
  <p
    className="MuiTypography-root-10 MuiTypography-body1-19 undefined X"
  >
    test
  </p>
</a>
`;
